deployment/kubernetes/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage
  namespace: massivedecks-rubenflinterman-com
spec:
  selector:
    app: storage
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
  namespace: massivedecks-rubenflinterman-com
spec:
  serviceName: storage
  replicas: 1
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "massivedecks"]
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: storage-data
          persistentVolumeClaim:
            claimName: postgres-pvc
